--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,6 +14,7 @@
     "build:sitemap": "node ./internals/generate-sitemap.mjs",
     "embeddings": "tsx scripts/search/generate-embeddings.ts",
     "embeddings:refresh": "npm run embeddings -- --refresh",
+    "codemod:frontmatter": "node ./scripts/codemod/mdx-meta.mjs && prettier --write \"content/**/*.mdx\"",
     "postbuild": "node ./internals/generate-sitemap.mjs"
   },
   "dependencies": {
@@ -75,6 +76,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.2.24",
     "@types/unist": "^2.0.6",
+    "acorn": "^8.11.3",
     "config": "*",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
