--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,6 +7,7 @@
     "dev:secrets:pull": "AWS_PROFILE=supabase-dev node ../../scripts/getSecrets.js -n local/docs",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
+    "codegen": "openapi-typescript http://localhost:8080/api-json -o types/api.d.ts && prettier --write types/api.d.ts",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
@@ -30,6 +31,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.3",
+    "@tanstack/react-query": "^5.13.4",
     "common": "*",
     "config": "*",
     "framer-motion": "^6.5.1",
@@ -54,8 +56,10 @@
     "next-seo": "^5.14.1",
     "next-themes": "^0.2.1",
     "openai": "^4.17.0",
+    "openapi-fetch": "^0.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-intersection-observer": "^9.5.2",
     "react-markdown": "^8.0.3",
     "rehype-slug": "^5.1.0",
@@ -84,6 +88,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "openapi-types": "^12.0.2",
+    "openapi-typescript": "^6.7.2",
     "sass": "^1.68.0",
     "tsconfig": "*",
     "tsx": "^4.6.2",
