Fix asynchronous function call in setSession (#20990)
Co-authored-by: Mohammed Yasin Mulla <mohammedyasin@obmondo.com>
Co-authored-by: Charis <26616127+charislam@users.noreply.github.com>

--- a/apps/docs/spec/supabase_js_v2.yml
+++ b/apps/docs/spec/supabase_js_v2.yml
@@ -1007,7 +1007,7 @@ functions:
         isSpotlight: true
         code: |
           ```js
-            const { data, error } = supabase.auth.setSession({
+            const { data, error } = await supabase.auth.setSession({
               access_token,
               refresh_token
             })
