docs: Updated Flutter reference docs for filters to be more aligned with js docs (#21036)
* Updated Flutter docs to have better contains and contained by example

* Add data source to Flutter docs

* Tidy up the using filters section

* fix: show the data directly in sample response

--- a/apps/docs/spec/supabase_js_v2.yml
+++ b/apps/docs/spec/supabase_js_v2.yml
@@ -4085,7 +4085,7 @@ functions:
                 name
               )
             `)
-            .or('country_id.eq.1,name.eq.Beijing', { referenceTable: 'cities' })
+            .or('country_id.eq.1,name.eq.Beijing', { referencedTable: 'cities' })
           ```
         data:
           sql: |
